--- a/forgot-password.html
+++ b/forgot-password.html
@@ -31,7 +31,7 @@
                         <div class="form-group pt-0">
                             <button type="submit" name="signin" id="signin" class="btn btn-primary px-3 font-weight-bold">Send Now</button>
                         </div>
-                        <p class="pt-1">Back to <a href="login.html"><strong>Login</strong></a></p>
+                        <p class="pt-1">Back to <a href="index.html"><strong>Login</strong></a></p>
                     </form>
                 </div>
             </div>
