--- a/register.html
+++ b/register.html
@@ -39,7 +39,7 @@
                         <div class="form-group">
                             <button type="submit" name="signin" id="signin" class="btn btn-primary px-3 font-weight-bold">Register</button>
                         </div>
-                        <p class="pt-1">Already have an account? <a href="login.html"><strong>Login</strong></a></p>
+                        <p class="pt-1">Already have an account? <a href="index.html"><strong>Login</strong></a></p>
                     </form>
                 </div>
                 <div class="col-lg-6 col-md-12 order-1 order-lg-2 pr-0 text-center">
