--- a/forgot-password.html
+++ b/forgot-password.html
@@ -23,7 +23,7 @@
                 <div class="col-lg-6 col-md-12 d-flex justify-content-center flex-column text-lg-left text-center">
                     <h2 class="form-title py-3">Forgot Password</h2>
                     <p class="text-success">We will send you a link to reset your password.</p>
-                    <form method="POST" class="register-form" id="login-form">
+                    <form method="POST" action="#" class="register-form" id="login-form">
                         <div class="form-group">
                             <label class="form-label" for="username"><i class="fa fa-user material-icons-name"></i></label>
                             <input type="text" name="username" id="username" autocomplete="off" placeholder="Username or Email Address" />
