--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
                 </div>
                 <div class="col-lg-6 col-md-12 d-flex justify-content-center flex-column text-lg-left text-center">
                     <h2 class="form-title py-3">Sign In</h2>                    
-                    <form method="POST" class="register-form" id="login-form">
+                    <form method="POST" action="#" class="register-form" id="login-form">
                         <div class="form-group">
                             <label class="form-label" for="username"><i class="fa fa-user material-icons-name"></i></label>
-                            <input type="text" name="username" id="username" autocomplete="off" placeholder="Username" />
+                            <input type="text" name="username" id="username" autocomplete="off" placeholder="Username" required>
                         </div>
                         <div class="form-group">
                             <label class="form-label" for="password"><i class="fa fa-lock"></i></label>
-                            <input type="password" name="password" id="password" autocomplete="off" placeholder="Password" />
+                            <input type="password" name="password" id="password" autocomplete="off" placeholder="Password" required>
                             <label class="form-label" id="show-pwd" for="password"><i class="fa fa-eye fa-eye-slash"></i></label>
                         </div>
                         <div class="form-group d-lg-flex justify-content-between">
