--- a/register.html
+++ b/register.html
@@ -19,22 +19,22 @@
             <div class="align-items-center row">
                 <div class="col-lg-6 col-md-12 d-flex flex-column justify-content-center order-2 order-lg-1 text-center text-lg-left">
                     <h2 class="form-title py-3">Sign Up</h2>
-                    <form method="POST" class="register-form" id="login-form">
+                    <form method="POST" action="#" class="register-form" id="login-form">
                         <div class="form-group">
                             <label class="form-label" for="username"><i class="fa fa-user material-icons-name"></i></label>
-                            <input type="text" name="username" id="username" autocomplete="off" placeholder="Username">
+                            <input type="text" name="username" id="username" autocomplete="off" placeholder="Username" required>
                         </div>
                         <div class="form-group">
                             <label class="form-label" for="email"><i class="fa fa-envelope material-icons-name"></i></label>
-                            <input type="text" name="email" id="email" autocomplete="off" placeholder="Email Address">
+                            <input type="text" name="email" id="email" autocomplete="off" placeholder="Email Address" required>
                         </div>
                         <div class="form-group">
                             <label class="form-label" for="password"><i class="fa fa-lock"></i></label>
-                            <input type="password" name="password" id="password" autocomplete="off" placeholder="Password">
+                            <input type="password" name="password" id="password" autocomplete="off" placeholder="Password" required>
                         </div>
                         <div class="form-group">
                             <label class="form-label" for="confirm_password"><i class="fa fa-lock"></i></label>
-                            <input type="password" name="confirm_password" id="confirm_password" autocomplete="off" placeholder="Confirm Password">
+                            <input type="password" name="confirm_password" id="confirm_password" autocomplete="off" placeholder="Confirm Password" required>
                         </div>
                         <div class="form-group">
                             <button type="submit" name="signin" id="signin" class="btn btn-primary px-3 font-weight-bold">Register</button>
