--- a/register.html
+++ b/register.html
@@ -1,11 +1,40 @@
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,300&display=swap" rel="stylesheet">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <!-- metas -->
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>    
+    <meta name="author" content="Rayees">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta http-equiv="x-dns-prefetch-control" content="on" >
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>My Works | Custom Registration Form</title>
+    <meta name="keywords" content="register, reg-form , custom, ui, ux, rayeesac">
+    <meta name="description" content="A custom user-firendly, responsive, bootstrap Registration form with Light and Night mode.">
+    <link rel="shortlink" href="https://www.rayeesac.ml/" />
+    <meta http-equiv="content-language" content="en" />
 
-<link rel="stylesheet" href="assets/css/font-awesome.min.css">
-<link rel="stylesheet" href="assets/css/bootstrap.min.css">
-<link rel="stylesheet" href="assets/css/custom.css">
+    <link rel="canonical" href="https://www.rayeesac.ml/" />
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="48x48" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <meta name="robots" content="follow, index" />
 
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#ff0000">
+    <meta name="theme-color" content="#ffffff">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,300&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/custom.css">
+</head>
 <body>
     <div class="main-wrapper register">
         <div class="container sign-wrapper position-relative">
@@ -37,7 +66,7 @@
                             <input type="password" name="confirm_password" id="confirm_password" autocomplete="off" placeholder="Confirm Password" required>
                         </div>
                         <div class="form-group">
-                            <button type="submit" name="signin" id="signin" class="btn btn-primary px-3 font-weight-bold">Register</button>
+                            <button type="button" name="signin" id="signin" class="btn btn-primary px-3 font-weight-bold">Register</button>
                         </div>
                         <p class="pt-1">Already have an account? <a href="index.html"><strong>Login</strong></a></p>
                     </form>
